--- a/invitacion.css
+++ b/invitacion.css
@@ -69,8 +69,8 @@ body {
   
   .text {
     position: absolute;
-    font-family: 'Brush Script MT', cursive;
-    font-size: 28px;
+    font-family: 'Great Vibes', cursive;
+    font-size: 22px;
     text-align: center;
     line-height:25px;
     top:19px;
@@ -94,6 +94,16 @@ body {
 }
 
 .card-image {
+    width: 30%;  /* Ajusta el tamaño de la imagen */
+    height: auto; /* Mantiene la relación de aspecto */
+    position: absolute;  /* Coloca la imagen dentro del card */
+    top: 50%;  /* Centra la imagen verticalmente */
+    left: 50%;  /* Centra la imagen horizontalmente */
+    transform: translate(-50%, -50%);  /* Ajusta la posición para que esté exactamente en el centro */
+    border-radius: 10px; /* Redondea las esquinas de la imagen */
+}
+
+.card-image-face {
     width: 30%;  /* Ajusta el tamaño de la imagen */
     height: auto; /* Mantiene la relación de aspecto */
     position: absolute;  /* Coloca la imagen dentro del card */
